--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "framer-motion": "^6.3.3",
+    "jsqr": "^1.4.0",
     "leaflet": "^1.8.0",
+    "prettier": "^3.3.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.1.0",
